--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,5 @@
 uswremote.cloud.com
+https://ces-gis.southwales.ac.uk:2345/geoserver/web/
 
 30032007@students.southwales.ac.uk
 SummerBeLongToMe123@@
@@ -8,3 +9,6 @@ TRJ 204
 30032007
 SummerBeLongToMe123@@
 
+ces-gis
+s20
+WnJh
